--- a/20210928/WA50/WA50/WA50.csproj
+++ b/20210928/WA50/WA50/WA50.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -8,6 +8,11 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.10" />
     <PackageReference Include="Westwind.AspNetCore.LiveReload" Version="0.3.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\proyecto\NorthwindStore\Northwind.Store.Data\Northwind.Store.Data.csproj" />
+    <ProjectReference Include="..\..\..\proyecto\NorthwindStore\Northwind.Store.Model\Northwind.Store.Model.csproj" />
   </ItemGroup>
 
 </Project>
