--- a/NorthwindStore/Northwind.Store.UI.Web.Intranet/Northwind.Store.UI.Web.Intranet.csproj
+++ b/NorthwindStore/Northwind.Store.UI.Web.Intranet/Northwind.Store.UI.Web.Intranet.csproj
@@ -14,11 +14,12 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.11" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
+    <PackageReference Include="X.PagedList.Mvc.Core" Version="8.1.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
-    <Folder Include="Areas\Admin\Models\" />
+    <Folder Include="Areas\Admin\Model\" />
   </ItemGroup>
 
   <ItemGroup>
