--- a/proyecto/NorthwindStore/Northwind.Store.UI.Web.Intranet/Northwind.Store.UI.Web.Intranet.csproj
+++ b/proyecto/NorthwindStore/Northwind.Store.UI.Web.Intranet/Northwind.Store.UI.Web.Intranet.csproj
@@ -14,11 +14,13 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.11" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
+    <PackageReference Include="Westwind.AspNetCore.LiveReload" Version="0.3.5" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Models\" />
+    <Folder Include="wwwroot\lib\" />
   </ItemGroup>
 
   <ItemGroup>
