--- a/proyecto/NorthwindStore/Northwind.Store.UI.Web.Intranet/appsettings.Development.json
+++ b/proyecto/NorthwindStore/Northwind.Store.UI.Web.Intranet/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=.\\sqlexpress;Database=Northwind;Integrated Security=SSPI;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "NW": "Data Source=.\\sqlexpress;Database=Northwind;Integrated Security=SSPI;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
