Actualización de código base de proyecto

--- a/proyecto/NorthwindStore/Northwind.Store.Data/Northwind.Store.Data.csproj
+++ b/proyecto/NorthwindStore/Northwind.Store.Data/Northwind.Store.Data.csproj
@@ -6,10 +6,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.11" />
+    <PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.13" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Northwind.Store.Model\Northwind.Store.Model.csproj" />
+    <ProjectReference Include="..\Northwind.Store.Notification\Northwind.Store.Notification.csproj" />
   </ItemGroup>
 
 </Project>
