--- a/proyecto/NorthwindStore/Northwind.Store.UI.Web.Intranet/appsettings.json
+++ b/proyecto/NorthwindStore/Northwind.Store.UI.Web.Intranet/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=.\\sqlexpress;Database=Northwind;User Id=nwuser;Password=nwuser;MultipleActiveResultSets=true",
-    "NW": "Data Source=.\\sqlexpress;Database=Northwind;Database=Northwind;User Id=nwuser;Password=nwuser;MultipleActiveResultSets=true"
+    "NW": "Data Source=.\\sqlexpress;Database=Northwind;User Id=nwuser;Password=nwuser;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
