--- a/proyecto/NorthwindStore/Northwind.Store.UI.Web.Intranet/Northwind.Store.UI.Web.Intranet.csproj
+++ b/proyecto/NorthwindStore/Northwind.Store.UI.Web.Intranet/Northwind.Store.UI.Web.Intranet.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <_ContentIncludedByDefault Remove="wwwroot\css\site.min.css" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="5.0.11" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.11" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="5.0.11" />
